@@ -21,6 +21,18 @@
 	        <version>6.0.0</version>
 	    </dependency>
 
+		<!-- JavaFX Core Dependencies -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>23.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>23.0.1</version>
+		</dependency>
+
 		<!-- JavaFX FXML -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -43,6 +55,18 @@
 				<version>3.13.0</version>
 				<configuration>
 					<release>17</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.8</version>
+				<configuration>
+					<mainClass>ExpenseForm.ExpsenseFormApp</mainClass>
+					<options>
+						<option>--add-modules</option>
+						<option>javafx.controls,javafx.fxml</option>
+					</options>
 				</configuration>
 			</plugin>
 			<plugin>
